# causal-effect-engine

./: .gitignore  Dockerfile  README.md  pyproject.toml  research_memo.md
.github/workflows/: ci.yml
briefs/: initial_brief.md
configs/: config.yaml
notebooks/: 01_eda_overlap.ipynb  02_ate_ladder.ipynb  03_cate_models.ipynb  04_validation.ipynb
src/estimators/: ate.py  cate.py  econometric.py
src/evaluation/: benchmark.py  pehe.py  refutation.py  sensitivity.py  uplift.py
src/identification/: checks.py  dag.py
src/ingestion/: load_datasets.py
src/serve/: api.py
tests/: test_estimators.py
