[project]
name = "causal-effect-engine"
version = "0.1.0"
description = "Heterogeneous treatment-effect engine: estimate, validate, and serve causal effects"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Causal inference
    "dowhy>=0.11",
    "econml>=0.15",
    "causalml>=0.15",
    # Econometrics
    "linearmodels>=5.4",
    "statsmodels>=0.14",
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    # DAG
    "networkx>=3.3",
    "graphviz>=0.20",
    # Storage
    "duckdb>=0.10",
    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Config
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]
notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]
ui = [
    "streamlit>=1.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
